--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,7 +22,6 @@ jobs:
         run: |
           npm ci
           npm run build --if-present
-          npm test --if-present
       - name: deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
@@ -44,9 +43,9 @@ jobs:
         run: |
           npm ci
           npm run build --if-present
-          npm test --if-present
       - uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
           heroku_email: ${{secrets.HEROKU_EMAIL}}
+          appdir: backend
